fix: Arrows and overflows

--- a/src/style.css
+++ b/src/style.css
@@ -17,12 +17,14 @@ html,
   height: 100%;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .diagram {
+  position: relative;
   width: 100%;
-  height: 100%;
-  flex: none;
+  flex: 1 1 0%;
+  overflow: hidden;
 }
 
 .drop {
@@ -32,6 +34,8 @@ html,
 
 .item {
   position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   display: flex;
@@ -113,6 +117,8 @@ svg {
   position: absolute;
   width: 100%;
   height: 100%;
+  left: 0;
+  top: 0;
 }
 
 .info {
